--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.172",
+    "@types/react-router-dom": "^5.1.8",
     "@types/uuid": "^8.3.1"
   }
 }
